# InSAR-DA

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASET.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
configs/: main.yaml
data/: datasets_public_true_types_obs_step_final_10k_50x50.yaml
data/domains_10k_50x50/Landslide_Bagnoregio/: sampled_10000_grid50x50_seed42.npz
data/domains_10k_50x50/Landslide_Saline_Joniche/: sampled_10000_grid50x50_seed42.npz
data/domains_10k_50x50/Subsidence_Como/: sampled_10000_grid50x50_seed42.npz
runtime/: README.md
scripts/: rebuild_results_summaries.py  run_case.py  run_official_matrix.py  run_sweep.py  sanitize_public_metadata.py  summarize.py
src/insarda/: config.py
src/insarda/cli/: run_case.py  run_official_matrix.py  run_sweep.py  summarize.py
src/insarda/data_pipeline/: __init__.py  builder.py  loaders.py  preprocess.py  splits.py  windows.py
src/insarda/data_prep/: __init__.py  io.py
src/insarda/evaluation/: __init__.py  evaluate.py  metrics.py
src/insarda/methods/: __init__.py  base.py  coral_utils.py  sft_replay.py  source_only.py  ss_coral.py  ss_dann.py  ss_mt.py  st_joint.py  supervised_fine_tuning.py  target_only.py
src/insarda/models/: __init__.py  ema.py  predictor.py  transformer.py
src/insarda/reporting/: __init__.py  summarize.py
src/insarda/training/: __init__.py  loop.py  runner.py
src/insarda/utils/: io.py  torch_runtime.py
tests/: test_public_release_smoke.py
